--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">WebApiTutorial</string>
+    <string name="app_name">WebAPITutorial</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_result">Results</string>
     <string name="email_address">Email Address</string>
     <string name="button_submit">Submit</string>
 </resources>
